# chatt-bot

./: LICENSE  LICENSE.txt  README.md  pyproject.toml
src/chatt_bot/: bot_utils.py  chatt_bot_cli.py  directory_utils.py  robot_actions.py
src/chatt_bot.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: read_me.txt
