[build-system]
requires = ["setuptools"]
[project]
name = "chatt_bot"
version = "0.0.0"
description = "Tool that allows people to explore Chattanooga."
dependencies = ["selenium", "webdriver_manager", "requests", "bs4", "typer", "cryptography"]
authors = [
	{name = "Manuel Cruz"}
]
maintainers = [
	{name = "Manuel Cruz", email="cruz.manuel62@gmail.com"}
]
readme = "README.md"
keywords = ["Chattanooga", "Help Bot"]
[project.scripts]
chatt_bot = "chatt_bot.chatt_bot_cli:app"
